gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/go-todo-network: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: forwardbackend
              value: http://www.google.com
          image: kevin234kevin999/gatewaycs:2.1
          name: gateway
          ports:
            - containerPort: 8080
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
status: {}
