go-todo-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: go-todo-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/go-todo-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/go-todo-network: "true"
